update migration script to use legacyxml pipeline